@startuml TileTextureGenerator - Hexagonal Architecture Overview

!define CORE_COLOR #E1F5FE
!define ADAPTER_COLOR #FFF9C4
!define INFRA_COLOR #F0F4C3
!define UI_COLOR #E8EAF6

title TileTextureGenerator - Hexagonal Architecture (Ports & Adapters Pattern)

skinparam packageStyle rectangle

' Core (Hexagon center)
package "CORE\n(Domain + Application Logic)" CORE_COLOR {
    package "Entities" {
        [ProjectBase]
        [TransformationBase]
        [FloorTileProject]
        [WallTileProject]
        [HorizontalFloorTransformation]
        [VerticalWallTransformation]
    }
    
    package "Services" {
        [ProjectsManager]
    }
    
    package "Registries" {
        [TextureProjectRegistry]
        [TransformationTypeRegistry]
    }
    
    package "**PORTS**" {
        rectangle "Input Ports\n(Driving)" #C8E6C9 {
            interface IProjectsManager
        }
        
        rectangle "Output Ports\n(Driven)" #FFCCBC {
            interface IProjectsStore
            interface IProjectStore
            interface ITransformationStore
        }
    }
}

' Left side adapters (Driving - UI)
package "DRIVING ADAPTERS" UI_COLOR {
    package "TileTextureGenerator\n(MAUI App)" {
        [MauiProgram]
        [AppShell]
    }
    
    package "Presentation.UI" {
        [Pages]
        [ViewModels]
        [Converters]
    }
    
    package "Adapters.UseCases" {
        [ManageProjectListUseCase]
        [EditProjectUseCase]
    }
}

' Right side adapters (Driven - Persistence)
package "DRIVEN ADAPTERS" ADAPTER_COLOR {
    package "Adapters.Persistence" {
        [JsonProjectsStore]
        [JSonProjectStore]
        [JSonTransformationStore]
        [Helpers]
    }
}

' Infrastructure
package "INFRASTRUCTURE" INFRA_COLOR {
    [FileSystem\nService]
    [Embedded\nResources]
    [SkiaSharp]
}

' Dependencies flow (Dependency Inversion)
[ViewModels] --> [ManageProjectListUseCase] : uses
[ViewModels] --> [EditProjectUseCase] : uses
[ManageProjectListUseCase] --> IProjectsManager : **uses interface**
[EditProjectUseCase] --> [ProjectBase] : wraps

[ProjectsManager] .up.|> IProjectsManager : **implements**
[ProjectsManager] --> IProjectsStore : **uses interface**

[JsonProjectsStore] .up.|> IProjectsStore : **implements**
[JSonProjectStore] .up.|> IProjectStore : **implements**
[JSonTransformationStore] .up.|> ITransformationStore : **implements**

[JsonProjectsStore] --> [FileSystem\nService] : uses
[JSonProjectStore] --> [Helpers] : uses
[JSonTransformationStore] --> [Helpers] : uses

[TransformationTypeRegistry] --> [Embedded\nResources] : loads icons
[HorizontalFloorTransformation] --> [SkiaSharp] : uses
[VerticalWallTransformation] --> [SkiaSharp] : uses

note as DependencyRule
  **Dependency Rule (Clean Architecture)**
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  Dependencies point **INWARD** only:
  
  UI → Adapters → **CORE** ← Adapters ← Infrastructure
  
  Core has **NO dependencies** on outer layers.
  Adapters depend on Core **interfaces only**.
end note

note as PortsExplanation
  **Ports & Adapters Pattern**
  ━━━━━━━━━━━━━━━━━━━━━━━━
  **Input Ports (Driving):**
  - Defined in Core
  - Implemented in Core (Services)
  - Used by UI Adapters (UseCases)
  
  **Output Ports (Driven):**
  - Defined in Core
  - Implemented by Infrastructure Adapters
  - Used by Core Entities/Services
end note

note as RegistryPattern
  **Registry Pattern (Factory + DI)**
  ━━━━━━━━━━━━━━━━━━━━━━━━
  1. Static constructors register types
  2. DI factory injected at startup
  3. Create() uses factory + Initialize()
  4. Supports polymorphic instantiation
end note

@enduml
